--- a/resume.html
+++ b/resume.html
@@ -6,38 +6,40 @@
 <body>
 
     <h1>Masuma Fathema</h1>
-    <p><strong>Email:</strong> masuma@example.com</p>
-    <p><strong>Phone:</strong> +91-9876543210</p>
+    <p><strong>Email:</strong> masuma.fathema08@gmail.com</p>
+    <p><strong>Phone:</strong> +91-7337307498</p>
     <p><strong>Location:</strong> Hyderabad, India</p>
 
     <hr>
 
     <h2>Career Objective</h2>
-    <p>To obtain a challenging position where I can effectively contribute my skills as a [Your Role], possessing competent technical skills.</p>
+    <p>To obtain a challenging position where I can effectively contribute my competent technical skills.</p>
 
     <hr>
 
     <h2>Education</h2>
     <ul>
         <li><strong>Bachelor of Technology in Computer Science</strong><br>
-        XYZ University, Hyderabad<br>
-        2021 - 2025</li>
+        KL University, Hyderabad<br>
+        2024 - 2028</li>
         <li><strong>Intermediate</strong><br>
-        ABC Junior College, Hyderabad<br>
-        2019 - 2021</li>
+        Page Junior College, Hyderabad<br>
+        2022 - 2024</li>
         <li><strong>High School</strong><br>
-        DEF High School, Hyderabad<br>
-        2018</li>
+        Sister Nivedita School, Hyderabad<br>
+        2022</li>
     </ul>
 
     <hr>
 
     <h2>Skills</h2>
     <ul>
-        <li>HTML, CSS, Java</li>
+        <li>HTML, C, Java, Python</li>
         <li>Git & GitHub</li>
         <li>Problem Solving</li>
         <li>Team Collaboration</li>
+        <li>Communication</li>
+        <li>Creative thinking</li>
     </ul>
 
     <hr>
@@ -63,6 +65,8 @@
         <li>English</li>
         <li>Hindi</li>
         <li>Urdu</li>
+        <li>Telugu</li>
+
     </ul>
 
     <hr>
