--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,46 @@
 <html>
 <head>
     <title>My Resume</title>
+        <style>
+        body {
+            background-color: #fefae0;
+            color: #333;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            padding: 30px;
+        }
+
+        h1 {
+            color: #d42e7f;
+            font-size: 36px;
+        }
+
+        h2 {
+            color: #2ea2a2;
+            margin-top: 30px;
+            border-bottom: 2px solid #ccc;
+            padding-bottom: 5px;
+        }
+
+        p, li {
+            font-size: 16px;
+            line-height: 1.6;
+        }
+
+        ul {
+            list-style-type: square;
+        }
+
+        hr {
+            border: none;
+            height: 1px;
+            background-color: #ccc;
+            margin: 30px 0;
+        }
+
+        strong {
+            color: #444;
+        }
+        </style>
 </head>
 <body>
 
