--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
 
     <h2>Skills</h2>
     <ul>
-        <li>HTML, C, Java, Python</li>
+        <li>HTML, C, Java, Python</li>sx
         <li>Git & GitHub</li>
         <li>Problem Solving</li>
         <li>Team Collaboration</li>
